<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_game" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/creditInfoarena" />
    </group>
</menu>
